--- a/thank.html
+++ b/thank.html
@@ -57,6 +57,7 @@
                         If you ever need more support, don't hesitate to get in touch!
                     </p>
                 </div>
+                </div>
         </div>
     <script src="script.js"></script>
 </body>
