updated css and html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             </p>
         </div>
         <div class="section">
-            <button id="btn" onclick="saveRating()">1</button>
-            <button id="btn" onclick="saveRating()">2</button>
-            <button id="btn" onclick="saveRating()">3</button>
-            <button class="btn4" id="btn" onclick="saveRating()">4</button>
-            <button class="btn5" id="btn" onclick="saveRating()">5</button>
+            <button class="btn" id="btn" onclick="saveRating()">1</button>
+            <button class="btn" id="btn" onclick="saveRating()">2</button>
+            <button class="btn"  id="btn" onclick="saveRating()">3</button>
+            <button class="btn" id="btn" onclick="saveRating()">4</button>
+            <button class="btn" id="btn" onclick="saveRating()">5</button>
         </div>
         <div class="submit">
             <button type="submit" id="submit">Submit</button>
