--- a/thank.html
+++ b/thank.html
@@ -49,7 +49,7 @@
                     </g>
                 </svg>
                 <div class="choosen-button">
-                    You selected <span id="rating"></span> out of 5
+                    You selected <span id="rate"></span> out of 5
                 </div>
                 <div class="footer">
                     <h2>Thank you!</h2>
